Make codebase build successfully under JDK 17